# stack-projects

./: .gitignore  README.md  package-lock.json
.github/workflows/: checks.yml
NodeJS/: .gitignore
NodeJS/deno/: message.txt
NodeJS/node-authentication/: app.js  package-lock.json
NodeJS/node-basics/: package-lock.json  package.json  routes.js  server.js
Python/python-postgre/: .env  Dockerfile  docker-compose.yml  pyproject.toml
Python/python-postgre/app/: main.py
Python/python-postgre/app/db/: connection.py  models.py
Python/python-postgre/app/migrations/: env.py
Python/python-postgre/app/migrations/versions/: 796186d2cd7a_.py  ca5173b9493a_add.py  d71f829c5e16_.py  e4d385e331a8_add_categories_table.py
Python/python-postgre/app/routes/: category_routes.py  pagination.py  product_routes.py
Python/python-postgre/app/schemas/: category.py  product.py  user.py
Python/python-postgre/app/test/: conftest.py
Python/python-postgre/app/test/routes/: test_category_routes.py  test_product_routes.py
Python/python-postgre/app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
Python/python-postgre/app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
Python/python-postgre/app/use_cases/: category.py  pagination.py  product.py  user.py
ts-imports/: index.html
ts-project/: package-lock.json  package.json  tsconfig.json  webpack.config.js
ts-react/: package.json
ts-website/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+319 files in other folders)
